--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 <a class="linkedin" href="https://www.linkedin.com/in/izan-jané-carvajal" target="_blank" rel="noopener">LinkedIn</a>
 </div>
 
-
 <div class="sidebar-block">
 <h3>Contacto</h3>
 <ul class="contact-list">
@@ -29,7 +28,6 @@
 <li> Vilanova i la Geltrú</li>
 </ul>
 </div>
-
 
 <div class="sidebar-block">
 <h3>Habilidades</h3>
@@ -41,7 +39,6 @@
 </ul>
 </div>
 
-
 <div class="sidebar-block">
 <h3>Idiomas</h3>
 <ul class="lang-list">
@@ -50,20 +47,13 @@
 <li>Inglés — B2</li>
 </ul>
 </div>
-
-
-<div class="sidebar-block footer-note">
-<p>Carpeta <code>imagenes/</code> para tu foto y capturas (profile.jpg, project_snmp.png).</p>
-</div>
 </aside>
-
 
 <main class="main-content">
 <header class="main-header">
 <button id="menuToggle" class="mobile-menu">☰</button>
 <h2 class="sr-only">Portafolio de Izan Jané</h2>
 </header>
-
 
 <section id="sobre" class="panel">
 <div class="panel-head">
@@ -74,7 +64,6 @@
 <p>Estudiante del ciclo superior ASIX con experiencia práctica en soporte técnico y administración básica de sistemas. Actualmente responsable en el departamento de IT en TEQMA: gestión de incidencias, políticas de backup y tareas de seguridad básica. Busco prácticas profesionales para aplicar conocimientos en entornos reales y seguir aprendiendo en administración de sistemas y redes.</p>
 </div>
 </section>
-
 
 <section id="experiencia" class="panel">
 <div class="panel-head">
@@ -92,33 +81,19 @@
 </ul>
 </article>
 
-
 <article class="job">
 <h3>KFC, Vilanova i la Geltrú — Atención al cliente</h3>
 <p class="meta">17/06/2024 — Actualidad</p>
 </div>
 
-
 <div class="project-right">
 <h3>Proyecto MIBDB SNMP</h3>
 <p class="project-desc">Implementación para gestión de MIBs y recepción de traps SNMP, con interfaz web y scripts de soporte. Incluye <code>app.py</code>, <code>trap_handler.py</code>, y base de datos <code>mibdb.sql</code>.</p>
 <p class="project-meta"><strong>Tecnologías:</strong> Python (Flask), SQL, Shell scripts. <a href="https://github.com/Edison04x8021/Proyecto_MIBDB_SNMP_Izan_Edison" target="_blank" rel="noopener">Ver en GitHub</a></p>
-<p class="project-actions">Sugerencia: añade capturas, README con pasos y un Dockerfile para despliegue rápido.</p>
-</div>
-</article>
-
-
-
-<article class="project placeholder">
-<div class="project-left"></div>
-<div class="project-right">
-<h3>Próximo proyecto</h3>
-<p class="project-desc">Añade aquí otro proyecto cuando lo completes. Pequeños scripts o documentación cuentan mucho.</p>
 </div>
 </article>
 </div>
 </section>
-
 
 <section id="competencias" class="panel">
 <div class="panel-head">
@@ -147,7 +122,6 @@
 </div>
 </section>
 
-
 <section id="contacto" class="panel">
 <div class="panel-head">
 <h2>Contacto</h2>
@@ -159,13 +133,11 @@
 </div>
 </section>
 
-
 <footer class="panel site-footer">
-<p>© Izan Jané Carvajal — Administrador de Sistemas en formación.</p>
+<p>© Izan Jané Carvajal — Administrador de Sistemas Informáticos en formación.</p>
 </footer>
 </main>
 </div>
-
 
 <script src="script.js"></script>
 </body>
